--- a/Reparaciones2014/nbproject/project.properties
+++ b/Reparaciones2014/nbproject/project.properties
@@ -25,10 +25,18 @@ dist.dir=dist
 dist.jar=${dist.dir}/Reparaciones2014.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.3.3.jar=librerias\\jcalendar-1.3.3.jar
+file.reference.MiComponente.jar=librerias\\MiComponente.jar
+file.reference.MiComponente1.jar=librerias\\MiComponente1.jar
+file.reference.ojdbc6.jar=D:\\MisArchivos\\iso\\NetbeansJAVA\\PLUGINjava\\ojdbc6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.MiComponente.jar}:\
+    ${file.reference.MiComponente1.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
